refactor : 채팅 내역 불러오기 수정 - List -> Pagination 처리